Added code documentation. GatewayDeviceHandler.java is still left to do.
git-svn-id: http://weupnp.googlecode.com/svn/trunk@10 be884a56-befc-11dd-9cb5-179210ed59e1